# plily

./: CMakeLists.txt
src/common/: CMakeLists.txt  common.h
src/list/: CMakeLists.txt  list.c  list.h
src/llist/: CMakeLists.txt  llist.c  llist.h
src/util/: CMakeLists.txt  util.c  util.h
test/: CMakeLists.txt  test_list.c  test_llist.c
